modify the .env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,1 +1,8 @@
-DB_URI = mongodb+srv://<username>:<password>@<cluster>/<database>
+DB_URI=mongodb+srv://<username>:<password>@<cluster>/<database>
+
+CONSUMER_KEY=<your_key>
+CONSUMER_KEY_SECRET=<your_secret_key>
+
+ACCESS_TOKEN=<your_access_token>
+ACCESS_TOKEN_SECRET=<your_access_secret>
+BEARER_TOKEN=<your_bearer_token>
